--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
 <body>
   <h1>SP | LT</h1>
   <div class="container">
-    <div class="bill">
-      <p>Bill</p>
-      <div>
-        <img src="images/icon-dollar.svg" alt="">
-        <input placeholder="143.55" type="text">
+    <div class="inputs">
+      <div class="bill">
+        <p>Bill</p>
+        <div>
+          <img src="images/icon-dollar.svg" alt="">
+          <input placeholder="143.55" type="text">
+        </div>
       </div>
-    </div>
-    <div class="tipSelector">
-      <p>Select Tip %</p>
-      <div>
-        <button data-value="5">5%</button>
-        <button data-value="10">10%</button>
-        <button data-value="15">15%</button>
-        <button data-value="20">20%</button>
-        <button data-value="25">25%</button>
-        <input placeholder="Custom" type="text">
+      <div class="tipSelector">
+        <p>Select Tip %</p>
+        <div>
+          <button data-value="5">5%</button>
+          <button data-value="10">10%</button>
+          <button data-value="15">15%</button>
+          <button data-value="20">20%</button>
+          <button data-value="25">25%</button>
+          <input placeholder="Custom" type="text">
+        </div>
       </div>
-    </div>
-    <div class="people">
-      <p>Number of People</p>
-      <div>
-        <img src="images/icon-person.svg" alt="">
-        <input placeholder="5" type="text">
+      <div class="people">
+        <p>Number of People</p>
+        <div>
+          <img src="images/icon-person.svg" alt="">
+          <input placeholder="5" type="text">
+        </div>
       </div>
     </div>
     <div class="result">
